--- a/javascript-smells-ui/package.json
+++ b/javascript-smells-ui/package.json
@@ -13,9 +13,16 @@
   },
   "main": "background.js",
   "dependencies": {
+    "buefy": "^0.7.10",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
+    "electron": "^5.0.0",
+    "vue-cli-plugin-electron-builder": "^1.3.6",
+    "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
@@ -23,10 +30,7 @@
     "@vue/cli-service": "^3.9.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.1",
-    "electron": "^5.0.0",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-cli-plugin-electron-builder": "^1.3.6",
-    "vue-template-compiler": "^2.6.10"
+    "eslint-plugin-vue": "^5.0.0"
   }
 }
