--- a/javascript-smells-ui/package.json
+++ b/javascript-smells-ui/package.json
@@ -13,15 +13,17 @@
   },
   "main": "background.js",
   "dependencies": {
-    "buefy": "^0.7.10",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/vue-fontawesome": "^0.1.6",
+    "buefy": "^0.7.10",
+    "child_process": "^1.0.2",
+    "core-js": "^2.6.5",
     "electron": "^5.0.0",
+    "util": "^0.12.1",
+    "vue": "^2.6.10",
     "vue-cli-plugin-electron-builder": "^1.3.6",
+    "vue-router": "^3.0.3",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
